--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/siwel/LudumDare40#readme",
   "dependencies": {
-    "phaser-ce": "^2.9.2"
+    "file-loader": "^1.1.5",
+    "phaser-ce": "^2.9.2",
+    "url-loader": "^0.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.33",
     "@babel/preset-env": "^7.0.0-beta.33",
     "babel-loader": "^8.0.0-beta.0",
+    "copy-webpack-plugin": "^4.2.3",
     "cross-env": "^5.1.1",
     "expose-loader": "^0.7.4",
     "html-webpack-plugin": "^2.30.1",
