--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "file-loader": "^1.1.5",
     "phaser-ce": "^2.9.2",
+    "pubsub-js": "^1.5.7",
     "url-loader": "^0.6.2"
   },
   "devDependencies": {
