--- a/package.json
+++ b/package.json
@@ -19,20 +19,25 @@
   },
   "homepage": "https://github.com/siwel/LudumDare40#readme",
   "dependencies": {
-    "file-loader": "^1.1.5",
     "phaser-ce": "^2.9.2",
     "pubsub-js": "^1.5.7",
     "singleton-pubsub": "^1.0.0",
-    "url-loader": "^0.6.2"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.33",
     "@babel/preset-env": "^7.0.0-beta.33",
+    "@babel/preset-react": "^7.0.0-beta.34",
     "babel-loader": "^8.0.0-beta.0",
     "copy-webpack-plugin": "^4.2.3",
     "cross-env": "^5.1.1",
+    "css-loader": "^0.28.7",
     "expose-loader": "^0.7.4",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
   }
