--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "dependencies": {
     "phaser-ce": "^2.9.2",
     "pubsub-js": "^1.5.7",
-    "singleton-pubsub": "^1.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "recharts": "^1.0.0-beta.6",
+    "singleton-pubsub": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.33",
