--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/siwel/LudumDare40#readme",
   "dependencies": {
+    "image-webpack-loader": "^3.4.2",
     "phaser-ce": "^2.9.2",
     "pubsub-js": "^1.5.7",
     "react": "^16.2.0",
@@ -37,6 +38,7 @@
     "expose-loader": "^0.7.4",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "img-loader": "^2.0.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.9.1",
