--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "recharts": "^1.0.0-beta.6",
+    "short-number": "^1.0.6",
     "singleton-pubsub": "^1.0.0"
   },
   "devDependencies": {
