--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^16.2.0",
     "recharts": "^1.0.0-beta.6",
     "short-number": "^1.0.6",
-    "singleton-pubsub": "^1.0.0"
+    "singleton-pubsub": "^1.0.0",
+    "sweetalert2": "^7.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.33",
